added keywords to identify files
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@48 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+-- Java syntax dictionary for TextMate.
+-- Author: Brian Lalor <blalor@bravo5.org>
+-- 
+-- $URL$
+-- $Id$
+
 Hey!  One I actually wrote! :-)
 
 Features the following:
