updated Java bundle with snippets, commands and ideas from lang@langriley.com.
git-svn-id: http://svn.textmate.org/trunk/Java.tmbundle@55 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/README
+++ b/README
@@ -10,11 +10,29 @@ Features the following:
 • bare-bones command for running ant.
   I'm not too happy with the way TM handles the external command or the new
   window, so I mostly stick with Terminal.app for this one.
-
 • snippet for creating getters and setters
   I'm pretty happy with this one. The order you do the placeholders is a
   little weird, but it does work...
-
 • syntaxes for properties files and the Java language
+• "Java Class" and "Java Interface" templates, which attempt to set the
+  package and @author tag automagically
 
-• "Java Source" template
+Lang Riley <lang@langriley.com> contributed the following:
+Commands
+• Find j-class declar
+• Find j-interf declar
+• Find j-senders
+• Java list methods
+• Find j-method declar
+Snippets
+• Java const def
+• Java if statement
+• Java if/else statement
+• Java JUnit test class def
+• Java logger
+• Java private method
+• Java private var
+• Java public method
+• Java try/catch/finally
+• Java while statement
+• JSTL c:out
